--- a/public/style.css
+++ b/public/style.css
@@ -38,6 +38,7 @@
     font-size: 24px;
     font-weight: bold;
     cursor: pointer;
+    text-decoration: none;
   }
   
   .auto-type-btn.flashing-animation {
